<resources>
    <string name="shop">Shop</string>
    <string name="facebook_app_id">289364746194780</string>
    <string name="fb_login_protocol_scheme">fb289364746194780</string>
    <string name="track_your_orders">Track your orders</string>
    <string name="title_activity_mainfragment">MainfragmentActivity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="your_complete_turf_solution">Your complete turf solution</string>
    <string name="create_all_quotes">Create all quotes</string>
    <string name="showcase_your_portfolios">Showcase your portfolios</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="error_no_network">Unfortunately no internet connection can be found. Please connect to WIFI or a mobile network.</string>
    <string name="splash_main_label">Your complete turf solution</string>
    <string name="splash_sub_label">Melbourne\'s Premier Instant Turf Supplier</string>
    <string name="skip">Skip</string>
    <string name="sign_up">Sign up</string>
    <string name="log_in">Log in</string>
    <string name="create_account_label">Create account</string>
    <string name="username_hint">User Name*</string>
    <string name="email_hint">Email*</string>
    <string name="password_hint">Password*</string>
    <string name="business_name_hint">Business Name*</string>
    <string name="abn_hint">ABN*</string>
    <string name="phone_number_hint">Phone Number</string>
    <string name="phone_number_hint_require">Phone Number*</string>
    <string name="are_you_a_landscaper">Are you a landscaper?</string>
    <string name="lanscaper_register_info">Your application will be reviewed by Anco Turf.\nIn the interim you can browse as a retail customer
    </string>
    <string name="tnc_text">By creating account you accept the\nTerms and Conditions and Privacy Policy</string>
    <string name="already_have_an_account_login">Already have an account?
        <b>Log in</b>
    </string>
    <string name="black_username_message">Please enter name</string>
    <string name="black_firstname_message">Please enter your first name</string>
    <string name="black_lastname_message">Please enter your last name</string>
    <string name="invalid_username_message">Please enter your full name</string>
    <string name="blank_email_message">Please enter your email address</string>
    <string name="blank_review_message">Please add a review prior to clicking submit</string>
    <string name="blank_rating_message">Please add a product rating prior to clicking submit </string>
    <string name="invalid_email_message">Please enter a valid email address</string>
    <string name="blank_password_message">Please enter a password</string>
    <string name="invalid_password_message">Your password must be between 6 to 50 characters</string>
    <string name="blank_business_name_message">Please enter your business name</string>
    <string name="blank_abn_message">Please enter your ABN</string>
    <string name="invalid_abn_messgae">Please enter a valid Australian Business Number (ABN)</string>
    <string name="blank_phone_number_message">Please enter your phone number</string>
    <string name="invalid_phone_number_message">Please enter a valid phone number</string>
    <string name="valid">Valid</string>
    <string name="forgot_password_text">Forgot your password? Tap to reset</string>
    <string name="don_t_have_an_account_sign_up">Don\'t have an account?
        <b>Sign up</b>
    </string>
    <string name="product_n_catalogue">Product\nCatalogue</string>
    <string name="product_catalogue">Product Catalogue</string>
    <string name="calculation_label_text">Unsure? Use our turf calculator</string>
    <string name="shop_now">Shop Now</string>
    <string name="forgot_password">Forgot password</string>
    <string name="retrieve_password">Reset password</string>
    <string name="add_to_cart">Add to cart</string>
    <string name="home_footer_tab">HOME</string>
    <string name="payments_footer_tab">PAYMENTS</string>
    <string name="contact_footer_tab">CONTACT</string>
    <string name="profile_footer_tab">PROFILE</string>
    <string name="forgot_password_sub_label">Enter your email below to receive your password reset instructions</string>
    <string name="firstname_label">First Name</string>
    <string name="lastname_label">Last Name</string>
    <string name="firstname_hint">First Name*</string>
    <string name="lastname_hint">Last Name*</string>
    <string name="filter">Filter</string>
    <string name="sort_by">Sort By</string>
    <string name="tags">Tags</string>
    <string name="categories">Categories</string>
    <string name="price_range">Price range</string>
    <string name="apply">Apply</string>
    <string name="clear_all">Clear all</string>
    <string name="shop_all">Shop All</string>
    <string name="customer_nreviews">customer\nreviews</string>
    <string name="customer_nreview">customer\nreview</string>
    <string name="qty_total"> <Data><![CDATA[ <b> QTY Total: </b> ]]> </Data> $%s</string>
    <string name="share">Share:</string>
    <string name="related_items">Related items</string>
    <string name="show_all">Show all</string>
    <string name="review_item_title"><Data><![CDATA[ <b>%1$s</b>]]> </Data> - %2$s </string>
    <string name="reviews_title">Reviews</string>
    <string name="please_install_facebook_app">Please install facebook app</string>
    <string name="please_install_twitter_app">Please install twitter app</string>
    <string name="portfolio">Portfolio</string>
    <string name="add_portfolio">Add To Portfolio</string>
    <string name="items">%d items</string>
    <string name="unauthorized_message">Your session has expired, please login again.</string>
    <string name="new_portfolio">New Portfolio</string>
    <string name="project_name">Project Name</string>
    <string name="project_name_hint">e.g Address or Nickname</string>
    <string name="project_details">Project Details</string>
    <string name="budget">Budget:</string>
    <string name="address">Address:</string>
    <string name="portfolio_images">Portfolio images</string>
    <string name="add_portfolio_image">+ Add Portfolio Image</string>
    <string name="project_description">Project Description</string>
    <string name="project_utilised">Project Utilised</string>
    <string name="add_anco_turf_product">+ Add Anco Turf Product</string>
    <string name="add_product_outside_our_range">+ Add Product Outside Our range</string>
    <string name="publish_portfolio">Publish Portfolio</string>
    <string name="back_to_portfolio">Back to portfolio</string>
    <string name="add_product">+ Add Product</string>
    <string name="add_products_label">Add Products</string>
    <string name="product_qty">QTY:</string>
    <string name="non_anco_product_qty">QTY: %s</string>
    <string name="chooser_title">Send to</string>
    <string name="add_review">Add Review</string>
    <string name="name_label">Name*</string>
    <string name="email_product_hint">Email</string>
    <string name="name_hint">Name</string>
    <string name="your_review_hint">Your Review</string>
    <string name="your_review">Your Review</string>
    <string name="submit">Submit</string>
    <string name="your_rating_hint">Your Rating*</string>
    <string name="no_portfolio_found">No portfolio found</string>
    <string name="no_product_found">No product found</string>
    <string name="add_a_custom_product">Add a custom product</string>
    <string name="custom_product_hint">Custom Product</string>
    <string name="description">Description*</string>
    <string name="quantity_label">Quantity*</string>
    <string name="price_label">Price*</string>
    <string name="confirm_and_add_to_portfolio">Confirm and add to portfolio</string>
    <string name="cancel">Cancel</string>
    <string name="black_product_name_message">Please enter the name of the product</string>
    <string name="black_product_description_message">Please enter product description</string>
    <string name="black_product_quantity_message">Please enter the quantity of the product used to complete the portfolio</string>
    <string name="invalid_product_quantity_message">The custom product quantity needs to be greater than 0</string>
    <string name="black_product_price_message">Please enter product price</string>
    <string name="invalid_product_price_message">The custom product price needs to be greater than $0</string>
    <string name="dialog_title_choose_image_from">Choose Image From</string>
    <string name="camera">Camera</string>
    <string-array name="dialog_choose_image">
        <item>@string/camera</item>
        <item>@string/gallery</item>
    </string-array>
    <string name="msg_photo_file_create_error">The image failed to load, please try again.</string>
    <string name="msg_app_not_found">Please allow the app to access your %1$s.</string>
    <string name="setting">SETTING</string>
    <string name="gallery">Gallery</string>
    <string name="grant">Grant</string>
    <string name="profile_success">Profile updated successfully.</string>
    <string name="profile_failed">Profile data not updated successfully.</string>
    <string name="msg_storage_permission_explain">%1$s wants to access storage to get Photos from gallery.</string>
    <string name="camera_permission_explain">%1$s wants to access camera.</string>
    <string name="file_provider_authorities">.ancofileprovider</string>
    <string name="address_hint">Enter your address.</string>
    <string name="project_description_hint">Enter your project description.</string>
    <string name="product_description_hint">Enter your product description.</string>
    <string name="choose_your_products">Choose your products</string>
    <string name="anco_turf_products">Anco Turf\nproducts</string>
    <string name="done">Done</string>
    <string name="orders_title">Orders</string>
    <string name="shop_title">Shop</string>
    <string name="tracking_title">Tracking</string>
    <string name="portfolio_title">Portfolio</string>
    <string name="quote_title">Quote</string>
    <string name="quick_order_title">Quick Order</string>
    <string name="turf_calculator_title">Turf Calculator</string>
    <string name="lawn_tips_title">Lawn Tips</string>
    <string name="contact_label">Contact</string>
    <string name="operating_hours_label">Operating Hours</string>
    <string name="call_now">Call Now</string>
    <string name="separator">____</string>
    <string name="product_total_price">= $%s</string>
    <string name="clear_filter_confirmation_message">Are you sure you want to clear the applied filter?</string>
    <string name="clear_filters">Clear Filters</string>
    <string name="no_filter_message">There isn\'t any filter to clear</string>
    <string name="blank_project_name">Please enter the name of your project</string>
    <string name="address_label">Address:</string>
    <string name="address_quote_hint">Address*</string>
    <string name="mobile_number_label">Mobile Number:</string>
    <string name="mobile_number_hint">Mobile Number*</string>
    <string name="add_customer">Add Customer</string>
    <string name="customer_name_label">Customer Name:</string>
    <string name="customer_name_hint">Customer Name*</string>
    <string name="email_address_label">Email:</string>
    <string name="email_address_hint">Email*</string>
    <string name="customer_phone_number_label">Phone Number:</string>
    <string name="customer_phone_number_hint">Phone Number</string>
    <string name="request_a_product">Request a product</string>
    <string name="product_description">Product Description*</string>
    <string name="product_url">Product Url</string>
    <string name="confirm_request"><![CDATA[Confirm & Request Product]]></string>
</resources>