<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:background="@android:color/white"
    android:layout_height="match_parent"
    android:paddingStart="@dimen/_8sdp"
    android:paddingEnd="@dimen/_8sdp"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_20sdp">

  <!--<include-->
  <!--layout="@layout/header"-->
  <!--android:id="@+id/header"-->
  <!--android:layout_width="0dp"-->
  <!--android:layout_height="wrap_content"-->
  <!--app:layout_constraintStart_toStartOf="parent"-->
  <!--app:layout_constraintEnd_toEndOf="parent"-->
  <!--app:layout_constraintTop_toTopOf="parent"/>-->

  <!--<androidx.appcompat.widget.AppCompatImageView-->
  <!--android:id="@+id/imgBack"-->
  <!--android:layout_width="wrap_content"-->
  <!--android:layout_height="wrap_content"-->
  <!--app:layout_constraintStart_toStartOf="parent"-->
  <!--app:layout_constraintTop_toBottomOf="@+id/header"-->
  <!--android:src="@drawable/ic_back"-->
  <!--app:layout_constraintBottom_toBottomOf="@+id/txtTitle"-->
  <!--android:padding="@dimen/_4sdp"-->
  <!--android:layout_marginTop="@dimen/_8sdp"/>-->

  <!--<androidx.appcompat.widget.AppCompatTextView-->
  <!--android:id="@+id/txtTitle"-->
  <!--android:layout_width="0dp"-->
  <!--android:layout_height="wrap_content"-->
  <!--app:layout_constraintStart_toEndOf="@id/imgBack"-->
  <!--app:layout_constraintTop_toBottomOf="@+id/header"-->
  <!--app:layout_constraintEnd_toStartOf="@+id/txtAddCustomer"-->
  <!--android:text="@string/customer_info"-->
  <!--android:textColor="@android:color/black"-->
  <!--android:textSize="@dimen/_22sdp"-->
  <!--android:fontFamily="@font/sf_pro_display_bold"-->
  <!--android:layout_marginStart="@dimen/_4sdp"/>-->

  <androidx.appcompat.widget.AppCompatImageView
      android:id="@+id/imgClose"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toTopOf="parent"
      android:src="@drawable/ic_close_dialog"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtTitle"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/header"
      android:text="@string/add_customer"
      android:textColor="@android:color/black"
      android:textSize="@dimen/_22sdp"
      android:gravity="center"
      android:fontFamily="@font/sf_pro_display_bold"
      android:layout_marginStart="@dimen/_4sdp"/>

  <View
      android:id="@+id/view"
      android:layout_width="match_parent"
      android:layout_height="2px"
      android:background="@color/grey"
      android:layout_marginTop="@dimen/_12sdp"
      app:layout_constraintTop_toBottomOf="@+id/txtTitle"/>

  <androidx.constraintlayout.widget.Guideline
      android:id="@+id/guide"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:orientation="vertical"
      app:layout_constraintGuide_percent="0.45"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtCustomerNameLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/view"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/guide"
      android:text="@string/customer_name_label"
      android:fontFamily="@font/sf_pro_text_bold"
      android:textSize="@dimen/_12ssp"
      android:layout_marginStart="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_12sdp"/>

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtCustomerName"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/view"
      app:layout_constraintStart_toEndOf="@+id/guide"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="Rechard"
      android:hint="@string/customer_name_hint"
      android:layout_marginStart="@dimen/_4sdp"
      android:fontFamily="@font/sf_pro_text_regular"
      android:textSize="@dimen/_12ssp"
      android:background="@null"
      android:singleLine="true"
      android:layout_marginEnd="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_12sdp"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtAddressLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtCustomerName"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/guide"
      android:text="@string/address_label"
      android:fontFamily="@font/sf_pro_text_bold"
      android:textSize="@dimen/_12ssp"
      android:layout_marginStart="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtAddress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtCustomerName"
      app:layout_constraintStart_toEndOf="@+id/guide"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="15 New Street, Brighton 3186"
      android:background="@null"
      android:hint="@string/address_quote_hint"
      android:layout_marginStart="@dimen/_4sdp"
      android:fontFamily="@font/sf_pro_text_regular"
      android:layout_marginEnd="@dimen/_12sdp"
      android:textSize="@dimen/_12ssp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtEmailAddressLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/guide"
      android:text="@string/email_address_label"
      android:fontFamily="@font/sf_pro_text_bold"
      android:textSize="@dimen/_12ssp"
      android:layout_marginStart="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtEmailAddress"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtAddress"
      app:layout_constraintStart_toEndOf="@+id/guide"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="ABC Landscaping"
      android:background="@null"
      android:singleLine="true"
      android:hint="@string/email_address_hint"
      android:layout_marginStart="@dimen/_4sdp"
      android:fontFamily="@font/sf_pro_text_regular"
      android:layout_marginEnd="@dimen/_12sdp"
      android:textSize="@dimen/_12ssp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtMobileNumLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/guide"
      android:text="@string/mobile_number_label"
      android:fontFamily="@font/sf_pro_text_bold"
      android:textSize="@dimen/_12ssp"
      android:layout_marginStart="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtMobileNum"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtEmailAddress"
      app:layout_constraintStart_toEndOf="@+id/guide"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="0400 000 000"
      android:background="@null"
      android:hint="@string/mobile_number_hint"
      android:layout_marginStart="@dimen/_4sdp"
      android:fontFamily="@font/sf_pro_text_regular"
      android:textSize="@dimen/_12ssp"
      android:singleLine="true"
      android:maxLength="10"
      android:inputType="phone"
      android:layout_marginEnd="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>


  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtPhoneNumLabel"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtMobileNum"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintEnd_toEndOf="@+id/guide"
      android:text="@string/customer_phone_number_label"
      android:fontFamily="@font/sf_pro_text_bold"
      android:textSize="@dimen/_12ssp"
      android:layout_marginStart="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>

  <androidx.appcompat.widget.AppCompatEditText
      android:id="@+id/edtPhoneNum"
      android:layout_width="0dp"
      android:layout_height="wrap_content"
      app:layout_constraintTop_toBottomOf="@+id/edtMobileNum"
      app:layout_constraintStart_toEndOf="@+id/guide"
      app:layout_constraintEnd_toEndOf="parent"
      tools:text="chard@abdlandscaping.com.au"
      android:background="@null"
      android:hint="@string/customer_phone_number_hint"
      android:layout_marginStart="@dimen/_4sdp"
      android:fontFamily="@font/sf_pro_text_regular"
      android:textSize="@dimen/_12ssp"
      android:singleLine="true"
      android:maxLength="10"
      android:inputType="phone"
      android:layout_marginEnd="@dimen/_12sdp"
      android:textColor="@android:color/black"
      android:layout_marginTop="@dimen/_6sdp"/>


  <androidx.appcompat.widget.AppCompatTextView
      android:id="@+id/txtSubmit"
      android:layout_width="wrap_content"
      android:layout_height="wrap_content"
      android:text="@string/submit"
      android:gravity="center"
      android:textColor="@android:color/white"
      android:textSize="@dimen/_11ssp"
      android:fontFamily="@font/sf_pro_text_bold"
      app:layout_constraintStart_toStartOf="parent"
      app:layout_constraintTop_toBottomOf="@+id/edtPhoneNum"
      android:foreground="?android:attr/selectableItemBackground"
      app:layout_constraintEnd_toEndOf="parent"
      android:layout_marginEnd="@dimen/_12sdp"
      android:layout_marginStart="@dimen/_12sdp"
      android:layout_marginTop="@dimen/_20sdp"
      android:paddingStart="@dimen/_44sdp"
      android:paddingEnd="@dimen/_44sdp"
      android:paddingTop="@dimen/_8sdp"
      android:paddingBottom="@dimen/_8sdp"
      android:layout_marginBottom="@dimen/_8sdp"
      android:background="@drawable/bg_green_rounded"/>

</androidx.constraintlayout.widget.ConstraintLayout>