<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:paddingTop="@dimen/_8sdp"
    android:paddingBottom="@dimen/_20sdp">

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/imgClose"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="@dimen/_8sdp"
        android:src="@drawable/ic_close_dialog"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:fontFamily="@font/sf_pro_display_bold"
        android:gravity="center"
        android:text="@string/request_a_product"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_22sdp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="2px"
        android:layout_marginTop="@dimen/_8sdp"
        android:background="@color/grey"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtProductName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:text="@string/name_label"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/view" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtName"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:hint="@string/name_hint"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductName" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:text="@string/email_hint"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtName" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtEmail"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:hint="@string/email_product_hint"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtEmail" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:text="@string/product_description"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtEmail" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtProductDescription"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:hint="@string/product_description_hint"
        android:padding="@dimen/_6sdp"
        android:singleLine="true"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductDescription" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtProductUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_8sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:text="@string/product_url"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProductDescription" />

    <androidx.appcompat.widget.AppCompatEditText
        android:id="@+id/edtProductUrl"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_4sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@android:color/transparent"
        android:fontFamily="@font/sf_pro_text_regular"
        android:gravity="center"
        android:hint="@string/product_url"
        android:padding="@dimen/_6sdp"
        android:textColor="@android:color/black"
        android:textSize="@dimen/_12ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtProductUrl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtSubmitRequest"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/_12sdp"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginEnd="@dimen/_12sdp"
        android:background="@drawable/bg_green_rounded"
        android:fontFamily="@font/sf_pro_text_semibold"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/confirm_request"
        android:textColor="@android:color/white"
        android:textSize="@dimen/_14ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/edtProductUrl" />

    <androidx.appcompat.widget.AppCompatTextView
        android:id="@+id/txtCancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_4sdp"
        android:fontFamily="@font/sf_pro_text_regular"
        android:foreground="?android:attr/selectableItemBackground"
        android:gravity="center"
        android:padding="@dimen/_8sdp"
        android:text="@string/cancel"
        android:textColor="@color/theme_green"
        android:textSize="@dimen/_13ssp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtSubmitRequest"/>

</androidx.constraintlayout.widget.ConstraintLayout>